# texo-ui

./: .gitignore  Cargo.toml  LICENSE  README.md
examples/: accordion.rs  markdown.rs  typst.md  typst.rs
src/: elements.rs  forms.rs  lib.rs  main.rs  util.rs
src/data_display/: latex.rs  markdown.rs  mod.rs  qrcode.rs  table.rs  typst.rs
src/elements/: accordion.rs  bottom_nav.rs  breadcrumb.rs  button.rs  code_editor.js  code_editor.rs  command_palette.rs  drawer.rs  dropdown.rs  markdown.rs  mod.rs  modal.rs  navbar.rs  pagination.rs  popover.rs  qrcode.rs  speed_dial.rs  spinner.rs  stacker.rs  table.rs  toast.rs  toolbar.rs  tree_view.rs
src/elements/syntax_themes/: base16-ocean.dark.tmTheme
src/hooks/: mod.rs  use_clipboard.rs  use_controller.rs  use_fullscreen.rs  use_slider.rs  use_timeout.rs  use_toast.rs  use_tween.rs
src/input/: button.rs  code_editor.rs  forms.rs  mod.rs
src/layout/: drawer.rs  mod.rs  modal.rs
src/navigation/: bottom_nav.rs  mod.rs  navbar.rs  pagination.rs  speed_dial.rs  tree_view.rs
src/utility/: card.rs  frame.rs  mod.rs  spinner.rs  toast.rs  toolbar.rs
