[package]
name = "texo-ui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { path = "../dioxus/packages/dioxus" }
tween ={ version = "2.0.2", default-features = false, features = ["libm"], optional = true}
log = "0.4.20"
thiserror = "1.0.56"
generational-box = { path = "../dioxus/packages/generational-box", optional = true}
async-std = {version="1.12.0", features = ["unstable"], optional = true}
qrcode = { version = "0.13.0", optional = true, default-features = false, features = ["image"]}
image = { version = "0.24.8", optional = true }
base64 = { version = "0.21.7", optional = true }
syntect = { version = "5.2.0", optional = true, default-features = false, features = ["html", "parsing", "regex-fancy", "plist-load"]}

wasm-bindgen-futures = { version = "0.4.40", optional = true }
web-sys = { version = "0.3.67", optional = true, features = ["Window", "Document", "HtmlElement"]}
arboard = { version = "3.3.0", optional = true} 
fastrand = {version = "2.0.1", default-features = false}

# gilrs = { version = "0.10.4", optional = true }

[features]
tween = ["dep:tween", "dep:async-std"]
desktop = ["dioxus/desktop", "dep:arboard", "fastrand/std"]
web = ["dioxus/web", "dep:web-sys", "fastrand/js"]
clipboard = ["dep:web-sys", "dep:generational-box", "dep:wasm-bindgen-futures", "dep:async-std", "web-sys?/Clipboard", "web-sys?/Navigator", "web-sys?/Permissions"]
code-editor = ["dep:syntect"]
qrcode = ["dep:qrcode", "dep:image", "dep:base64"]
# controller = ["dep:gilrs", "dep:async-std"]

[dev-dependencies]
log = "0.4.20"
dioxus-logger = "0.4.1"
wasm-logger = "0.2.0"
