[package]
name = "texo-ui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# dioxus = { path = "../dioxus/packages/dioxus" }
dioxus = { git = "https://github.com/dioxuslabs/dioxus" }
tween ={ version = "2.0.2", default-features = false, features = ["libm"], optional = true}
log = "0.4.20"
thiserror = "1.0.56"
# generational-box = { path = "../dioxus/packages/generational-box", optional = true}
generational-box = { git = "https://github.com/dioxuslabs/dioxus", optional = true}
async-std = {version="1.12.0", features = ["unstable"]}
qrcode = { version = "0.13.0", optional = true, default-features = false, features = ["image"]}
image = { version = "0.24.8", optional = true }
base64 = { version = "0.22.0", optional = true }

wasm-bindgen-futures = { version = "0.4.40", optional = true }
web-sys = { version = "0.3.67", optional = true, features = ["Window", "Document", "HtmlElement"]}
arboard = { version = "3.3.0", optional = true} 
fastrand = {version = "2.0.1", default-features = false}
markdown = "1.0.0-alpha.16"
typst = { git = "https://github.com/typst/typst", tag = "v0.10.0", optional = true }
typst-pdf = { git = "https://github.com/typst/typst", tag = "v0.10.0", optional = true }
# tectonic = { version = "0.15.0", default-features = false, optional = true }
# gilrs = { version = "0.10.4", optional = true }

[features]
typst = ["dep:typst-pdf", "dep:typst"]
# latex = ["dep:tectonic", "dep:base64"]
tween = ["dep:tween"]
desktop = ["dioxus/desktop", "dep:arboard", "fastrand/std"]
web = ["dioxus/web", "dep:web-sys", "fastrand/js"]
clipboard = ["dep:web-sys", "dep:generational-box", "dep:wasm-bindgen-futures",  "web-sys?/Clipboard", "web-sys?/Navigator", "web-sys?/Permissions"]
qrcode = ["dep:qrcode", "dep:image", "dep:base64"]
# controller = ["dep:gilrs", "dep:async-std"]

[dev-dependencies]
comemo = { version = "0.3.1" }
log = "0.4.20"
ureq = "2.9"
tar = "0.4"
zune-inflate = { version = "0.2", default_features = false, features = [
  "gzip",
  "std",
] }
time = "0.3"
ttf-parser = "0.20"
dioxus-logger = "0.4.1"
wasm-logger = "0.2.0"
